--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -214,7 +214,7 @@ a{
         cursor: pointer;
         color: white;
         font-size: 24px;
-        text-align: right;
+        justify-content: right;
     }
 
     .burger{
@@ -270,10 +270,6 @@ a{
         width: 100%;
         justify-content: left;
     }
-    
-.nav label{
-    text-align: right;
-}
 
     .nav-menu{
         flex-direction: column;
