--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -214,7 +214,7 @@ a{
         cursor: pointer;
         color: white;
         font-size: 24px;
-        justify-content: right;
+        content: right;
     }
 
     .burger{
