--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -226,6 +226,15 @@ a{
         font-size: xx-large;
     }
 
+    label {
+        text-align: right; /* Alineado a la derecha */
+        position: absolute; /* Posicionamiento absoluto */
+        right: 15px; /* Posicionado en el extremo derecho */
+        top: 50%;
+        transform: translateY(-50%); /* Centrado verticalmente */
+        z-index: 1000; /* Asegurar que esté por encima */
+    }
+
    /* .nav-menu li {
         text-align: left;
         margin: 5px 0;
