--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -227,12 +227,12 @@ a{
     }
 
     label {
-        text-align: right;
-      /*  position: absolute; 
-        right: 15px; 
+        text-align: right; /* Alineado a la derecha */
+        position: absolute; /* Posicionamiento absoluto */
+        right: 15px; /* Posicionado en el extremo derecho */
         top: 50%;
-        transform: translateY(-50%); 
-        z-index: 1000; */
+        transform: translateY(0%); /* Centrado verticalmente */
+        z-index: 1000; /* Asegurar que esté por encima */
     }
 
    /* .nav-menu li {
