--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -230,7 +230,7 @@ a{
         text-align: right; /* Alineado a la derecha */
         position: absolute; /* Posicionamiento absoluto */
         right: 15px; /* Posicionado en el extremo derecho */
-        top: 0%;
+        top: auto;
         transform: translateY(-50%); /* Centrado verticalmente */
         z-index: 1000; /* Asegurar que esté por encima */
     }
