--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -227,15 +227,22 @@ a{
     }
 
     label {
-        text-align: right; /* Alineado a la derecha */
-        position: absolute; /* Posicionamiento absoluto */
-        right: 15px; /* Posicionado en el extremo derecho */
-        top: 50%;
-        transform: translateY(-50%); /* Centrado verticalmente */
-        z-index: 1000; /* Asegurar que esté por encima */
+        text-align: right;
+        order: 2; /* Posicionar al final */
+        flex-shrink: 0; /* No se encoge */
     }
 
-   /* .nav-menu li {
+
+     /*label {
+        text-align: right; 
+        position: absolute; 
+        right: 15px; 
+        top: 50%;
+        transform: translateY(-50%); 
+        z-index: 1000; 
+    }
+
+   .nav-menu li {
         text-align: left;
         margin: 5px 0;
         display: block;
@@ -247,27 +254,10 @@ a{
     text-align: left;
     }
 
-    nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    }
-
-    nav ul li {
-    display: block;
-    margin-right: 10px;
-    font-size: 3rem;
-    }
-
     nav ul li :hover {
     background-color: #ff000038;
-    }
-
-    nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    display: flex;
     } */
+
 
     body {
         background-attachment: scroll;
