--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -226,23 +226,18 @@ a{
         font-size: xx-large;
     }
 
+
     label {
-        text-align: right;
-        order: 2; /* Posicionar al final */
-        flex-shrink: 0; /* No se encoge */
-    }
-
-
-     /*label {
         text-align: right; 
         position: absolute; 
         right: 15px; 
         top: 50%;
         transform: translateY(-50%); 
         z-index: 1000; 
+        margin-bottom: 20px;
     }
 
-   .nav-menu li {
+  /* .nav-menu li {
         text-align: left;
         margin: 5px 0;
         display: block;
