--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -222,7 +222,7 @@ a{
     }
 
     .burger{
-        height: 100%;
+        height: 93%;
         font-size: xx-large;
     }
 
@@ -234,7 +234,7 @@ a{
         top: 50%;
         transform: translateY(-50%); 
         z-index: 1000; 
-        margin-bottom: 20px;
+        margin-right: 20px;
     }
 
   /* .nav-menu li {
