--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -237,10 +237,11 @@ a{
         margin-right: 20px;
     }
 
-  /* .nav-menu li {
+     .nav-menu li {
         text-align: left;
         margin: 5px 0;
         display: block;
+        text-decoration: none;
     }
 
     nav {
@@ -251,7 +252,7 @@ a{
 
     nav ul li :hover {
     background-color: #ff000038;
-    } */
+    } 
 
 
     body {
