--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -237,17 +237,10 @@ a{
         margin-right: 20px;
     }
 
-     .nav-menu li {
-        text-align: left;
+     .nav-menu ul li {
         margin: 5px 0;
         display: block;
         text-decoration: none;
-    }
-
-    nav {
-    background: #ff000038;
-    color: #fff;
-    text-align: left;
     }
 
     nav ul li :hover {
