--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -243,7 +243,7 @@ a{
     
     nav ul {
         background-color: #ff000038; 
-        text-align: center;   
+        justify-content: center;   
     }
 
    /* nav ul li :hover {
