--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -200,7 +200,7 @@ a{
   }
 
     #toggle {
-        display: block;
+        display: none;
         cursor: pointer;
         color: white;
         font-size: 24px;
