--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -111,6 +111,7 @@ a{
         justify-content: center;
         gap: 15px;
         width: 100%;
+        display: flex;
     }
     
     .nav-centro li {
