--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -112,6 +112,7 @@ a{
         gap: 15px;
         width: 100%;
         display: flex;
+        flex-direction: row;
     }
     
     .nav-centro li {
