--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -263,6 +263,11 @@ a{
         flex-direction: column;
     }
 
+    .nav-menu.active {
+        display: flex;
+        flex-direction: column;
+    }
+
     .nav-izquierda {
         height: 45px;
         margin-bottom: 15px;
