--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -225,7 +225,7 @@ a{
     }
 
 
-    label {
+   /* label {
         text-align: right; 
         position: absolute; 
         right: 15px; 
@@ -233,7 +233,7 @@ a{
         transform: translateY(-50%); 
         z-index: 1000; 
         margin-right: 20px;
-    }
+    }*/
 
     nav a{
         text-decoration: none;
