--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -260,10 +260,10 @@ a{
         justify-content: left;
     }
 
-    .nav-menu.active {
+   /* .nav-menu.active {
         display: flex;
         flex-direction: column;
-    }
+    }*/
 
     .nav-centro ul{
         display: flex;
