--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -206,6 +206,7 @@ a{
 
 #toggle:checked + .burger + .nav-menu {
     display: flex;
+    flex-direction: column;
   }
 
     #toggle {
@@ -265,10 +266,10 @@ a{
         flex-direction: column;
     }*/
 
-    .nav-centro ul{
+  /*  .nav-centro ul{
         display: flex;
         flex-direction: column;
-    }
+    }*/
 
     .nav-izquierda {
         height: 45px;
