--- a/CSS/style-serie.css
+++ b/CSS/style-serie.css
@@ -175,7 +175,6 @@ a{
 
 
     .nav-principalSerie {
-        flex-direction: column;
         padding: 10px;
     }
     
@@ -188,7 +187,7 @@ a{
         gap: 10px;
     }
     
-    .nav-menu ul {
+    .nav-principalSerie ul {
         margin: 5px 0;
         text-align: center;
         width: 100%;
