--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -222,9 +222,9 @@ a{
         font-size: 24px;
     }
 
-    label{
+   /* label{
         text-align: right;
-    }
+    }*/
 
     .burger{
         height: 93%;
