--- a/CSS/style-serie.css
+++ b/CSS/style-serie.css
@@ -42,7 +42,7 @@ body{
     justify-content: center;
 }
 
-.nav-centroSerie li{
+.nav-menu li{
     margin: 10px;
 }
 
@@ -100,6 +100,10 @@ a{
         padding: 15px;
     }
     
+ul{
+    list-style: none;
+}
+
     .nav-menu {
         width: 100%;
         gap: 15px;
@@ -141,8 +145,10 @@ a{
     }
     
 .nav-menu {
-        display: none; /* Ocultamos el menú */
-    } 
+    display: none; /* Ocultamos el menú */
+    width: 100%;
+    gap: 10px;
+} 
 
 #toggle:checked + .burger + .nav-menu {
     display: flex;
@@ -161,6 +167,10 @@ a{
         font-size: xx-large;
         display: flex;
     }
+
+ul{
+    list-style: none;
+}
 
 
     label {
@@ -181,18 +191,12 @@ a{
  nav a{
         text-decoration: none;
     }
-
-    .nav-menu {
-        width: 100%;
-        gap: 10px;
-    }
     
     .nav-principalSerie ul {
         margin: 5px 0;
         text-align: center;
         width: 100%;
         font-size: 14px;
-        text-decoration: none;
     }
     
         .nav-serieizquierda {
