--- a/CSS/style-serie.css
+++ b/CSS/style-serie.css
@@ -185,7 +185,9 @@ ul{
 
 
     .nav-principalSerie {
-        padding: 10px;
+        gap: 10px;
+        width: 100%;
+        justify-content: left;
     }
     
  nav a{
