--- a/CSS/style-serie.css
+++ b/CSS/style-serie.css
@@ -146,7 +146,12 @@ ul{
     
 .nav-menu {
     display: none; /* Ocultamos el menú */
-} 
+}
+
+.nav-menu.active {
+    display: flex;
+    flex-direction: column;
+}
 
 .nav.nav-principalSerie ul{
     text-decoration: none;
