--- a/CSS/style-serie.css
+++ b/CSS/style-serie.css
@@ -95,7 +95,7 @@ body {
 }
     
 .nav-principalSerie {
-    padding: 15px;
+    padding: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -118,7 +118,8 @@ ul{
 }
 
 .nav-menu li{
-    margin: 10px;
+    margin: 5px;
+    text-decoration: none;
 }
   
 .nav-serieizquierda {
