--- a/CSS/style-serie.css
+++ b/CSS/style-serie.css
@@ -95,7 +95,7 @@ body {
 }
     
 .nav-principalSerie {
-    padding: 10px;
+  /*  padding: 10px;*/
     display: flex;
     align-items: center;
     justify-content: center;
