--- a/CSS/style-elenco.css
+++ b/CSS/style-elenco.css
@@ -102,7 +102,7 @@ a{
 
 /* DISENO RESPONSIVE */
 
-@media screen and (max-width: 768px) {
+@media (560 < width <= 768px) {
     body {
         background-attachment: scroll;
         font-size: medium;
@@ -137,6 +137,7 @@ a{
     .cuerpo-elenco {
         padding: 60px 30px;
         margin: 0 15px;
+        font-size: larger;
     }
     
     .elenco {
