--- a/CSS/style-elenco.css
+++ b/CSS/style-elenco.css
@@ -206,6 +206,42 @@ a{
         font-size: small;
     }
     
+    #toggle:checked + .burger + .nav-centro-elenco {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #toggle {
+        display: none;
+        cursor: pointer;
+        color: white;
+        font-size: 24px;
+    }
+
+    .burger{
+        height: 93%;
+        font-size: xx-large;
+        display: flex;
+    }
+
+    .nav-centro-elenco{
+        display: none;
+    }
+
+    label {
+        text-align: right; 
+        position: absolute; 
+        right: 15px; 
+        top: 50%;
+        transform: translateY(-50%); 
+        z-index: 1000; 
+        margin-right: 20px;
+    }
+
+    nav a{
+        text-decoration: none;
+    }
+
     .contenido-elenco {
         width: 98%;
     }
