--- a/CSS/style-elenco.css
+++ b/CSS/style-elenco.css
@@ -237,13 +237,12 @@ a{
         transform: translateY(-50%); 
         z-index: 1000; 
         margin-right: 20px;
+        color: white;
     }
 
     nav a{
         text-decoration: none;
         align-items: left;
-        text-align: left;
-        justify-content: left;
     }
 
     .contenido-elenco {
