--- a/CSS/style-elenco.css
+++ b/CSS/style-elenco.css
@@ -271,7 +271,13 @@ a{
     .nav-izquierda-elenco {
         height: 45px;
         margin-bottom: 10px;
-        align-items: left;
+        text-align: left;
+    }
+
+    .nav-izquierda-elenco img {
+        width: 800%;
+        height: auto;
+        max-width: 150px;
     }
     
     .cuerpo-elenco {
