--- a/CSS/style-elenco.css
+++ b/CSS/style-elenco.css
@@ -278,6 +278,7 @@ a{
         width: 800%;
         height: auto;
         max-width: 150px;
+        align-items: left;
     }
     
     .cuerpo-elenco {
