--- a/CSS/style-temporadas.css
+++ b/CSS/style-temporadas.css
@@ -246,6 +246,26 @@ a{
         font-size: 24px;
     }
 
+   .burger{
+        height: 93%;
+        font-size: xx-large;
+        display: flex;
+    }
+
+    label {
+        text-align: right; 
+        position: absolute; 
+        right: 15px; 
+        top: 50%;
+        transform: translateY(-50%); 
+        z-index: 1000; 
+        margin-right: 20px;
+    }
+
+    nav a{
+        text-decoration: none;
+    }
+
     .contenido-temporadas {
         width: 98%;
     }
