--- a/CSS/style-temporadas.css
+++ b/CSS/style-temporadas.css
@@ -130,7 +130,7 @@ a{
         margin: 0 15px;
         border-radius: 10px;
         text-align: center;
-        font-size: xx-large;
+        font-size: x-large;
     }
     
     .cuerpo-temporadas h1 {
