--- a/CSS/style-temporadas.css
+++ b/CSS/style-temporadas.css
@@ -130,17 +130,17 @@ a{
         margin: 0 15px;
         border-radius: 10px;
         text-align: center;
-        font-size: x-large;
+        font-size: larger;
     }
     
     .cuerpo-temporadas h1 {
-        font-size: 24px;
+        font-size: x-large;
         margin-bottom: 30px;
         text-align: center;
     }
     
     .cuerpo-temporadas h2 {
-        font-size: 20px;
+        font-size: x-large;
         margin: 25px 0 15px 0;
         text-align: center;
     }
