--- a/CSS/style-premios.css
+++ b/CSS/style-premios.css
@@ -93,9 +93,8 @@ a{
     }
 
     .contenido-premios {
-        width: 95%;
-        margin: 0 auto;
-        max-width: 768px;
+        padding: 30px 20px;
+        margin: 0 15px;
     }
     
     .nav-principal-premios {
@@ -127,7 +126,7 @@ a{
     }
     
     .cuerpo-premios {
-        width: 95%;
+        width: 100%;
         max-width: 768px;
     }
     
