--- a/CSS/style-premios.css
+++ b/CSS/style-premios.css
@@ -95,6 +95,7 @@ a{
     .contenido-premios {
         padding: 30px 20px;
         margin: 0 15px;
+        overflow-x: hidden;
     }
     
     .nav-principal-premios {
@@ -128,6 +129,7 @@ a{
     .cuerpo-premios {
         width: 100%;
         max-width: 768px;
+        overflow-x: hidden;
     }
     
     .cuerpo-premios h1 {
